--- a/BethanysPieShopAdmin/Views/Category/Index.cshtml
+++ b/BethanysPieShopAdmin/Views/Category/Index.cshtml
@@ -23,7 +23,10 @@ else
                 <td>@category.CategoryId</td>
                 <td>@category.Name</td>
                 <td>@category.DateAdded.Value.ToShortDateString()</td>
-                <td><a asp-action="Details" asp-route-id="@category.CategoryId">Details</a></td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@category.CategoryId">Details</a>
+                    <a asp-action="Edit" asp-route-id="@category.CategoryId">Edit</a>
+                </td>
             </tr>
         }
     </table>
